--- a/Views/ClientDashLayout.cshtml
+++ b/Views/ClientDashLayout.cshtml
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/Main/SignUn" style="font-size:150%; font-family:gabriola;" onmouseover="this.style.color = 'rgba(194, 112, 76, 1)'" onmouseout="    this.style.color = 'white'">
+                    <a href="/Main/SignUp" style="font-size:150%; font-family:gabriola;" onmouseover="this.style.color = 'rgba(194, 112, 76, 1)'" onmouseout="    this.style.color = 'white'">
                         <span class="glyphicon glyphicon-log-out glyph"></span>
                         Sign Out
                     </a>
