--- a/Views/Main/SignUp.cshtml
+++ b/Views/Main/SignUp.cshtml
@@ -116,11 +116,11 @@
 
 
 
-                            <label style=" color:white">Gender:</label>  &nbsp;<input type="radio" name="Gender" />
+                            <label style=" color:white">Gender:</label>  &nbsp;<input type="radio" value="Female" name="Gender" />
                             <label style=" color:white">
                                 Female
                             </label>
-                            <input type="radio" name="Gender" id="Gender" /> &nbsp;<label style=" color:white"> Male</label>
+                            <input value="Male" type="radio" name="Gender" id="Gender" /> &nbsp;<label style=" color:white"> Male</label>
                             <br><br>
                             <div class="row">
                                 <div class="col-sm-6">
