--- a/Views/Main/CrouselDivs.cshtml
+++ b/Views/Main/CrouselDivs.cshtml
@@ -38,7 +38,7 @@
                     </marquee>
                     <h1 style=" color:blue">
                         Environmental Management<br>
-                        Agency
+                        We Care About You
                     </h1>
                 </div>
             </div>
@@ -52,7 +52,7 @@
 
                     <h1 style=" color:blue">
                         Environmental Management<br>
-                        Agency
+                        We Care About You
                     </h1>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     <p style="font-size: 70px; color:#333">Doctor Quick</p><br>
                     <h1 style=" color:blue">
                         Environmental Management<br>
-                        Agency
+                        We Care About You
                     </h1>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                     <p style="font-size: 70px; color:#333">Doctor Quick</p><br>
                     <h1 style=" color:blue">
                         Environmental Management<br>
-                        Agency
+                        We Care About You
                     </h1>
                 </div>
             </div>
