--- a/Views/Main/SignUp.cshtml
+++ b/Views/Main/SignUp.cshtml
@@ -87,11 +87,11 @@
 
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <input id="FirstName" style="background-color:rgba(194, 112, 76, 1)" class="form-control" type="text" name="FirstName"
+                                    <input id="FirstName" style="background-color: rgba(194, 112, 76, 1); color: white" class="form-control" type="text" name="FirstName"
                                            placeholder="First Name*" required /><br />
                                 </div>
                                 <div class="col-sm-6 ">
-                                    <input id="LastName" class="form-control" type="text" name="LastName"
+                                    <input id="LastName" style="background-color: rgba(194, 112, 76, 1); color: white" class="form-control" type="text" name="LastName"
                                            placeholder="Last Name*" required /><br />
                                 </div>
 
@@ -99,41 +99,41 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <input class="form-control" id="Password" name="Password" placeholder="Password*"
+                                    <input class="form-control" style="background-color: rgba(194, 112, 76, 1); color: white" id="Password" name="Password" placeholder="Password*"
                                            type="password" />
                                     <br />
                                 </div>
                                 <div class="col-sm-6 ">
-                                    <input id="CPassword" type="password" class="form-control" name="CPassword"
+                                    <input id="CPassword" style="background-color: rgba(194, 112, 76, 1); color: white" type="password" class="form-control" name="CPassword"
                                            placeholder=" Confirm Password*" required />
                                     <br />
                                 </div>
 
 
-                            </div><input id="Email" type="email" class="form-control" style="width: 100%; " name="Email" placeholder="Email*" required><br />
+                            </div><input id="Email"   type="email" class="form-control" style="width: 100%; background-color: rgba(194, 112, 76, 1); color: white;" name="Email" placeholder="Email*" required><br />
 
-                            <input id="Address" class="form-control" type="text" style="width: 100%; " name="Address" placeholder="Address*" required /><br />
+                            <input id="Address" style="background-color: rgba(194, 112, 76, 1); color: white" class="form-control" type="text" style="width: 100%; " name="Address" placeholder="Address*" required /><br />
 
 
 
-                            <label style=" color:white">Gender:</label>  &nbsp;<input type="radio" value="Female" name="Gender" />
+                            <label style="  color:white">Gender:</label>  &nbsp;<input type="radio" value="Female" style="background-color:rgba(194, 112, 76, 1)" name="Gender" />
                             <label style=" color:white">
                                 Female
                             </label>
-                            <input value="Male" type="radio" name="Gender" id="Gender" /> &nbsp;<label style=" color:white"> Male</label>
+                            <input value="Male" type="radio" name="Gender" id="Gender" /> &nbsp;<label style=" color:white" > Male</label>
                             <br><br>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <input id="PhoneNo" type="tel" class="form-control" name="PhoneNo" placeholder="Phone No*" required /><br />
+                                    <input id="PhoneNo" style="background-color:rgba(194, 112, 76, 1); color:white" type="tel" class="form-control" name="PhoneNo" placeholder="Phone No*" required /><br />
                                 </div>
                                 <div class="col-sm-6 ">
-                                    <input id="City" class="form-control" type="text" name="City" placeholder="City*" required /><br />
+                                    <input id="City" style="background-color: rgba(194, 112, 76, 1); color: white" class="form-control" type="text" name="City" placeholder="City*" required /><br />
                                 </div>
 
 
                             </div>
 
-                            <input id="DOBirth" class="form-control" type="date" style="width: 100%; " name="DOBirth" placeholder=" Date of Birth*" required /><br />
+                            <input id="DOBirth" style="background-color: rgba(194, 112, 76, 1); color: white" class="form-control" type="date" style="width: 100%; " name="DOBirth" placeholder=" Date of Birth*" required /><br />
 
                             <button type="submit" id="SUButton" value="Sign Up" style=" margin-left:45%; margin-bottom:2%; border-radius: 10px; font-family: Gabriola;
                   color: rgba(194, 112, 76, 1); font-size:25px; border: solid double">
@@ -174,8 +174,8 @@
                 var j = $("#DOBirth").val();
 
                 alert(a);
-                alert(b);
-                // alert(Email);
+                alert(c);
+                 alert(e);
                 //alert(Address);
                 //alert(Gender);
                 // alert(PhoneNo);
