--- a/Views/Client/PAppForm.cshtml
+++ b/Views/Client/PAppForm.cshtml
@@ -189,7 +189,7 @@
 
                 $.ajax({
 
-                    url: "http://localhost:35003/api/APPOINTMENT/",
+                    url: "http://quickfyp51.apphb.com/api/APPOINTMENT",
                     type: "Post",
                     data: JSON.stringify({ FirstName: My, LastName: Your, Email: Em,  PhoneNo: P, Address: AH, DOBirth: DOB, Gender: G, City: C, MStatus: MS, Departments: Dp, OfcNo: Of, GName: Gn, GPhoneNo: Gp, Occupation: Oc, CDrName: Cdr, Responsible: R, RelationTopatient: P }), //{ Name: name, Address: address, DOB: dob },
                     contentType: 'application/json; charset=utf-8',
