--- a/Views/Client/PRegForm.cshtml
+++ b/Views/Client/PRegForm.cshtml
@@ -194,7 +194,7 @@
                alert(Bb);
                 $.ajax({
 
-                    url:"http://localhost:35003/api/REGISTER/",
+                    url: "http://quickfyp51.apphb.com/api/REGISTER",
                     type: "Post",
                     data: JSON.stringify({
                         FirstName: Aa, LastName: Bb, Email: Cc,  PhoneNo: Ee,
