--- a/Views/Main/SignUp.cshtml
+++ b/Views/Main/SignUp.cshtml
@@ -222,7 +222,7 @@
                 var data = id; +
                 $.ajax({
                     type: 'GET',
-                    url: "http://localhost:35003/api/SIGNUP/" + data,
+                    url: "http://quickfyp51.apphb.com/api/SIGNUP" + data,
                     dataType: 'json',
                     success: function (data) {
                         console.log(data);
