--- a/Views/Client/PRegForm.cshtml
+++ b/Views/Client/PRegForm.cshtml
@@ -232,7 +232,7 @@
                 var data = id; +
                 $.ajax({
                     type: 'GET',
-                    url: "http://localhost:1848/api/REGISTER/" + data,
+                    url: "http://quickfyp51.apphb.com/api/REGISTER" + data,
                     dataType: 'json',
                     success: function (data) {
                         console.log(data);
