--- a/Views/MainFirstLayout.cshtml
+++ b/Views/MainFirstLayout.cshtml
@@ -65,7 +65,7 @@
                 <li>
                     <a href="/Main/SignUp" onmouseover="Mover(this)" onmouseout="Mout(this)" class="dpnavlili" style="font-size:17px">
                         <span class="glyphicon glyphicon-user"></span>
-                        Sign In
+                        Sign Up
                     </a>
                 </li>
 
